--- a/Module_1/miniProject/pages/homePage.html
+++ b/Module_1/miniProject/pages/homePage.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="footer">
-            <div>NỘI THẤT ĐẸP</div>
+            <div></div>
         </div>
     </div>
 </body>
