--- a/Module_1/miniProject/pages/homePage.html
+++ b/Module_1/miniProject/pages/homePage.html
@@ -7,34 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
     <script src="https://kit.fontawesome.com/68734f4fab.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <link rel="stylesheet" href="../styles/header.css" type="text/css">
     <link rel="stylesheet" href="../styles/slides.css" type="text/css">
     <link rel="stylesheet" href="../styles/products.css" type="text/css">
 </head>
 
-<body onscroll="myFunction()">
+<body onscroll="myScroll()">
     <div class="container">
         <!-- ////////////     HEADER     //////////// -->
         <header id="nav-head">
-            <div class="nav-head_left">
-                <h2><a href="homePage.html">
-                        <img src="../images/logo.png" width="80%" alt="">
-                    </a></h2>
-            </div>
-
-            <div class="nav-head_center">
-                <h4><a href="#">Yêu Thích </a></h4>
-                <h4><a href="#">Yêu Thích </a></h4>
-            </div>
-
-            <div class="nav-head_right">
-                <a href="cartPage.html" class="card-link">Giỏ hàng<i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="loginForm.html" class="login-link" id="loginLink">
-                    <i class="fa-solid fa-user"></i> Đăng Nhập
-                </a>
-            </div>
         </header>
 
+        <!-- ////////////     CONTENT     //////////// -->
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <img src="../images/slide_1.jpg" style="width:100%">
