--- a/Module_1/miniProject/pages/loginForm.html
+++ b/Module_1/miniProject/pages/loginForm.html
@@ -7,62 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register-Form</title>
     <script src="https://kit.fontawesome.com/68734f4fab.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <link rel="stylesheet" href="../styles/header.css" type="text/css">
     <link rel="stylesheet" href="../styles/form-login_register.css" />
 
 </head>
 
 <body>
-    <div class="container">
-        <!-- ////////////     HEADER     //////////// -->
-        <header id="nav-head">
-            <div class="nav-head_left">
-                <h2><a href="homePage.html">
-                        <img src="../images/logo.png" width="80%" alt="">
-                    </a></h2>
-            </div>
 
-            <div class="nav-head_center">
-                <h4><a href="#">Yêu Thích </a></h4>
-                <h4><a href="#">Yêu Thích </a></h4>
-            </div>
+    <body onscroll="myScroll()">
+        <div class="container">
+            <!-- ////////////     HEADER     //////////// -->
+            <header id="nav-head">
+            </header>
 
-            <div class="nav-head_right">
-                <a href="cartPage.html" class="card-link">Giỏ hàng<i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="loginForm.html" class="login-link">
-                    <i class="fa-solid fa-user"></i> Đăng Nhập
-                </a>
+            <!-- ////////////     CONTENT     //////////// -->
+            <div id="content-form">
             </div>
-        </header>
-
-        <div class="content">
-            <!-- <form action="loginForm.html" onsubmit="return checkForm()"> -->
-            <div class="option-form">
-                <a href="registerForm.html">SIGN UP</a>
-                <a href="loginForm.html" style="background-color:#1cca8a">LOGIN</a>
-            </div>
-            <br>
-            <h2>FORM LOGIN</h2>
-            <hr>
-            <div class="form-control">
-                <label for="email"><b>Email</b></label>
-                <input type="text" id="inp-email" placeholder="Enter Email" name="email" required>
-            </div>
-
-            <div class="form-control">
-                <label for="password"><b>Password</b></label>
-                <input type="password" id="inp-password" placeholder="Enter Password" name="password" required>
-                <i class="fa-solid fa-eye-slash" id="btn-password"></i>
-            </div>
-            <div>
-                <p id="errorCheck"></p><br><br>
-                <button id="btn-submit">LOGIN</button>
-            </div>
-            <!-- </form> -->
         </div>
-    </div>
-</body>
-<script src="../javascript/header.js"></script>
-<script src="../javascript/login.js"></script>
+    </body>
+    <script src="../javascript/header.js"></script>
+    <script src="../javascript/login.js"></script>
 
 </html>
