--- a/Module_1/miniProject/pages/cartPage.html
+++ b/Module_1/miniProject/pages/cartPage.html
@@ -24,7 +24,7 @@
         </header>
 
         <!-- ////////////     CONTENT     //////////// -->
-        <div class="content">
+        <div class="content-card">
             <h2>Giỏ hàng của bạn</h2>
             <div id="renderCard"></div>
         </div>
