--- a/Module_1/miniProject/pages/homePage.html
+++ b/Module_1/miniProject/pages/homePage.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="content">
+        <div class="content-product">
             <h2 style="text-align:center">Sản Phẩm</h2>
             <!-- Tạo id để render ra sản phẩm bằng JS -->
             <div id="furniture"></div>
